Thu Mar  4 00:31:54 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextview.c (extend_selection): 
	* gtk/gtktextview.c (gtk_text_view_move_cursor_internal): Allow
	to select the last word in the buffer.  (#135487, Paolo Borelli)

Wed Mar  3 23:54:31 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentrycompletion.c: Doc update.

Wed Mar  3 17:30:18 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_mnemonic_activate): Check
	whether widgets are viewable, not just if they are
	mapped. (#122912, reported by Tim Evans)

Wed Mar  3 23:28:48 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_set_active): Move the actual
	implementation into a new gtk_combo_box_set_active_internal() 
	function, which doesn't do the short-circuiting. 
	* gtk/gtkcombobox.c (gtk_combo_box_model_row_deleted): Use
	set_active_internal() here, since the active item may change here,
	although the index is unchanged.

Wed Mar  3 23:26:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position): Reintroduce the
	traditional option menu placement of the popup for regular combo
	boxes. Grids and editable combo boxes use the combo-like placement 
	below the entry.  (#136021)
	* gtk/gtkcombobox.c (gtk_combo_box_menu_button_press): 
	* gtk/gtkcombobox.c (gtk_combo_box_popup): Call gtk_menu_set_active()
	before popping up the menu, to make the placement work.
	
Wed Mar  3 17:20:15 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_propagate_event): Special case
	scroll events so that they propagate up the widget
	heirarchy when received on insensitive widgets.
	(#101102, reported by Geoff Reedy)

Wed Mar  3 16:47:10 2004  Owen Taylor  <otaylor@redhat.com>

	 #109594, reported by Olivier Ripoll

	* gtk/gtkentry.c (gtk_entry_size_request): Use max of 
	width and digit width for gtk_entry_set_width_chars,
	and round up.

	* gtk/gtkcolorsel.c (gtk_color_selection_init): Set the
	width of the entry to 7 chars.
